--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -518,7 +518,8 @@
     }
 
     .k-grid-filter-popup {
-        min-width: 230px;
+        min-width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+        max-width: var( --kendo-grid-column-menu-max-width, #{$kendo-grid-column-menu-max-width} );
     }
 
     // Standalone column menu
@@ -1122,7 +1123,8 @@
 
     // Filter menu
     .k-filter-menu-popup {
-        width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+        min-width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+        max-width: var( --kendo-grid-column-menu-max-width, #{$kendo-grid-column-menu-max-width} );
     }
     .k-filter-menu {
         box-sizing: border-box;
@@ -1168,7 +1170,8 @@
     .k-filter-menu.k-popup,
     .k-grid-filter-popup.k-popup {
         .k-filter-menu-container {
-            width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+            min-width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+            max-width: var( --kendo-grid-column-menu-max-width, #{$kendo-grid-column-menu-max-width} );
         }
     }
 
@@ -1218,11 +1221,11 @@
     // Column menu
     .k-column-menu-popup,
     .k-grid-columnmenu-popup {
-        width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
+        min-width: var( --kendo-grid-column-menu-width, #{$kendo-grid-column-menu-width} );
         box-sizing: border-box;
 
         &.k-popup {
-            max-width: 100%;
+            max-width: var( --kendo-grid-column-menu-max-width, #{$kendo-grid-column-menu-max-width} );
         }
 
         .k-actions {
