--- a/packages/bootstrap/scss/grid/_variables.scss
+++ b/packages/bootstrap/scss/grid/_variables.scss
@@ -259,6 +259,7 @@ $kendo-grid-sticky-hover-bg: k-try-shade( $kendo-grid-bg ) !default;
 $kendo-grid-sticky-selected-hover-bg: k-color-shade( $kendo-grid-sticky-selected-bg, .7 ) !default;
 
 $kendo-grid-column-menu-width: 250px !default;
+$kendo-grid-column-menu-max-width: 320px !default;
 
 $kendo-grid-filter-menu-check-all-border-bottom-width: 1px !default;
 
