--- a/packages/classic/scss/grid/_variables.scss
+++ b/packages/classic/scss/grid/_variables.scss
@@ -265,6 +265,7 @@ $kendo-grid-sticky-hover-bg: $kendo-grid-hover-bg !default;
 $kendo-grid-sticky-selected-hover-bg: k-try-shade( $kendo-grid-sticky-selected-bg, 1 ) !default;
 
 $kendo-grid-column-menu-width: 230px !default;
+$kendo-grid-column-menu-max-width: 320px !default;
 
 $kendo-grid-filter-menu-check-all-border-bottom-width: 1px !default;
 
