--- a/packages/material/scss/grid/_variables.scss
+++ b/packages/material/scss/grid/_variables.scss
@@ -258,6 +258,7 @@ $kendo-grid-sticky-hover-bg: k-try-shade($kendo-grid-bg, 7%) !default;
 $kendo-grid-sticky-selected-hover-bg: k-try-shade($kendo-grid-sticky-selected-bg, .87) !default;
 
 $kendo-grid-column-menu-width: 250px !default;
+$kendo-grid-column-menu-max-width: 320px !default;
 
 $kendo-grid-filter-menu-check-all-border-bottom-width: 0 !default;
 
