fix(grid): locked columns header misalignment

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -49,6 +49,7 @@
 
         .k-grid-header,
         .k-grid-content,
+        .k-grid-content-locked,
         .k-grid-footer {
             .k-table {
                 table-layout: fixed;
