--- a/packages/fluent/scss/input/_layout.scss
+++ b/packages/fluent/scss/input/_layout.scss
@@ -36,8 +36,8 @@
             box-sizing: border-box;
         }
 
-        .k-input,
-        .k-picker {
+        > .k-input,
+        > .k-picker {
             border-width: 0 !important; // sass-lint:disable-line no-important
             color: inherit;
             background: none;
