--- a/packages/classic/scss/grid/_variables.scss
+++ b/packages/classic/scss/grid/_variables.scss
@@ -258,11 +258,11 @@ $kendo-grid-sticky-header-border: $kendo-grid-sticky-border !default;
 $kendo-grid-sticky-footer-bg: $kendo-grid-header-bg !default;
 $kendo-grid-sticky-footer-hover-bg: $kendo-grid-hover-bg !default;
 
-$kendo-grid-sticky-selected-bg: $kendo-grid-selected-bg !default;
-$kendo-grid-sticky-selected-alt-bg: k-try-shade( $kendo-grid-selected-bg, .5 ) !default;
+$kendo-grid-sticky-selected-bg: k-color-mix($kendo-selected-bg, #ffffff, 25%) !default;
+$kendo-grid-sticky-selected-alt-bg: k-try-shade( $kendo-grid-sticky-selected-bg, .5 ) !default;
 
 $kendo-grid-sticky-hover-bg: $kendo-grid-hover-bg !default;
-$kendo-grid-sticky-selected-hover-bg: k-try-shade( $kendo-grid-selected-bg, 1 ) !default;
+$kendo-grid-sticky-selected-hover-bg: k-try-shade( $kendo-grid-sticky-selected-bg, 1 ) !default;
 
 $kendo-grid-column-menu-width: 230px !default;
 
