--- a/packages/utils/scss/spacing/_padding.scss
+++ b/packages/utils/scss/spacing/_padding.scss
@@ -42,7 +42,7 @@
 
 /// This is equivalent to `padding: 0.75rem;`.
 /// @example padding: 0.75rem;
-/// @name .k-p-pd
+/// @name .k-p-md
 /// @group padding
 /// @contextType css
 
