--- a/packages/utils/scss/flex-grid/_grid-auto-flow.scss
+++ b/packages/utils/scss/flex-grid/_grid-auto-flow.scss
@@ -1,36 +1,36 @@
 /// This is equivalent to `grid-auto-flow: row;`.
 /// @example grid-auto-flow: row;
-/// @name .k-grid-auto-flow-row
+/// @name .k-grid-flow-row
 /// @group grid-auto-flow
 /// @contextType css
 
 /// This is equivalent to `grid-auto-flow: column;`.
 /// @example grid-auto-flow: column;
-/// @name .k-grid-auto-flow-column
+/// @name .k-grid-flow-column
 /// @group grid-auto-flow
 /// @contextType css
 
 /// This is equivalent to `grid-auto-flow: dense;`.
 /// @example grid-auto-flow: dense;
-/// @name .k-grid-auto-flow-dense
+/// @name .k-grid-flow-dense
 /// @group grid-auto-flow
 /// @contextType css
 
 /// This is equivalent to `grid-auto-flow: row dense;`.
 /// @example grid-auto-flow: row dense;
-/// @name .k-grid-auto-flow-row-dense
+/// @name .k-grid-flow-row-dense
 /// @group grid-auto-flow
 /// @contextType css
 
 /// This is equivalent to `grid-auto-flow: col dense;`.
 /// @example grid-auto-flow: col dense;
-/// @name .k-grid-auto-flow-col-dense
+/// @name .k-grid-flow-col-dense
 /// @group grid-auto-flow
 /// @contextType css
 
 /// This is equivalent to `grid-auto-flow: unset;`.
 /// @example grid-auto-flow: unset;
-/// @name .k-grid-auto-flow-unset
+/// @name .k-grid-flow-unset
 /// @group grid-auto-flow
 /// @contextType css
 
