--- a/packages/fluent/scss/list/_variables.scss
+++ b/packages/fluent/scss/list/_variables.scss
@@ -276,3 +276,10 @@ $kendo-list-group-item-shadow: none !default;
 /// The text color of the 'No Data' text.
 /// @group list
 $kendo-list-no-data-text: get-theme-color-var( neutral-160 ) !default;
+
+/// The color of the 'Option Label' text.
+/// @group list
+$kendo-list-option-label-text: $kendo-subtle-text !default;
+/// The color of the disabled 'Option Label' text.
+/// @group list
+$kendo-list-option-label-disabled-text: $kendo-disabled-text !default;
