docs(button): update variables description

--- a/packages/classic/scss/button/_variables.scss
+++ b/packages/classic/scss/button/_variables.scss
@@ -51,16 +51,16 @@ $kendo-button-md-font-size: $kendo-font-size-md !default;
 /// @group button
 $kendo-button-lg-font-size: $kendo-font-size-lg !default;
 
-/// The line height used along with $kendo-font-size.
+/// The line height used along with the $kendo-font-size variable.
 /// @group button
 $kendo-button-line-height: $kendo-line-height-md !default;
-/// The line height used along with the $kendo-font-size of the small Button.
+/// The line height used along with the $kendo-font-size variable of the small Button.
 /// @group button
 $kendo-button-sm-line-height: $kendo-line-height-md !default;
-/// The line height used along with the $kendo-font-size of the medium Button.
+/// The line height used along with the $kendo-font-size variable of the medium Button.
 /// @group button
 $kendo-button-md-line-height: $kendo-line-height-md !default;
-/// The line height used along with the $kendo-font-size of the large Button.
+/// The line height used along with the $kendo-font-size variable of the large Button.
 /// @group button
 $kendo-button-lg-line-height: $kendo-line-height-lg !default;
 
