--- a/packages/fluent/scss/button/_variables.scss
+++ b/packages/fluent/scss/button/_variables.scss
@@ -36,13 +36,13 @@ $kendo-button-md-font-size: var( --kendo-font-size, inherit ) !default;
 /// @group button
 $kendo-button-lg-font-size: var( --kendo-font-size, inherit ) !default;
 
-/// The line height used along with the $kendo-font-size of the small Button.
+/// The line height used along with the $kendo-font-size variable of the small Button.
 /// @group button
 $kendo-button-sm-line-height: var( --kendo-line-height, normal ) !default;
-/// The line height used along with the $kendo-font-size of the medium Button.
+/// The line height used along with the $kendo-font-size variable of the medium Button.
 /// @group button
 $kendo-button-md-line-height: var( --kendo-line-height, normal ) !default;
-/// The line height used along with the $kendo-font-size of the large Button.
+/// The line height used along with the $kendo-font-size variable of the large Button.
 /// @group button
 $kendo-button-lg-line-height: var( --kendo-line-height, normal ) !default;
 
