--- a/packages/default/scss/button/_variables.scss
+++ b/packages/default/scss/button/_variables.scss
@@ -51,16 +51,16 @@ $kendo-button-md-font-size: $kendo-button-font-size !default;
 /// @group button
 $kendo-button-lg-font-size: $kendo-font-size-lg !default;
 
-/// The line height used along with $kendo-font-size.
+/// The line height used along with the $kendo-font-size the.
 /// @group button
 $kendo-button-line-height: $kendo-line-height-md !default;
-/// The line height used along with the $kendo-font-size of the small Button.
+/// The line height used along with the $kendo-font-size the of the small Button.
 /// @group button
 $kendo-button-sm-line-height: $kendo-line-height-md !default;
-/// The line height used along with the $kendo-font-size of the medium Button.
+/// The line height used along with the $kendo-font-size the of the medium Button.
 /// @group button
 $kendo-button-md-line-height: $kendo-button-line-height !default;
-/// The line height used along with the $kendo-font-size of the large Button.
+/// The line height used along with the $kendo-font-size the of the large Button.
 /// @group button
 $kendo-button-lg-line-height: $kendo-line-height-lg !default;
 
