--- a/packages/material/scss/dropdowntree/_variables.scss
+++ b/packages/material/scss/dropdowntree/_variables.scss
@@ -1,3 +1,8 @@
 // Dropdowntree
+
+/// The horizontal padding of the DropdownTree popup
+/// @group dropdowntree
 $kendo-dropdowntree-popup-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// The vertical padding of the DropdownTree popup
+/// @group dropdowntree
 $kendo-dropdowntree-popup-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
